--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  display: flex;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 code {
