--- a/src/components/picker/selected/selected.scss
+++ b/src/components/picker/selected/selected.scss
@@ -11,6 +11,7 @@ $block: '.selected';
     border-radius: 4px;
     display: flex;
     flex-direction: column-reverse;
+    align-items: center;
     cursor: pointer;
     background: #fff;
     z-index: 0;
@@ -25,6 +26,9 @@ $block: '.selected';
         user-select: none;
         pointer-events: none;
         text-align: center;
+        background: #fff;
+        padding: 2px 4px;
+        border-radius: 4px;
     }
 
     &__empty {
@@ -49,6 +53,14 @@ $block: '.selected';
         transition: transform 0.25s;
     }
 
+    &__pattern {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        z-index: -1;
+        transform: translate(-50%, -50%);
+    }
+
     &__color {
         background: var(--color, red);
         height: 48px;
@@ -58,7 +70,10 @@ $block: '.selected';
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-        border: 2px solid #141B1F;
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
+            0 2px 4px rgba(0, 0, 0, 0.1),
+            0 4px 8px rgba(0, 0, 0, 0.1),
+            0 8px 16px rgba(0, 0, 0, 0.1);
     }
 
     &--active {
