--- a/src/components/picker/platter/platter.scss
+++ b/src/components/picker/platter/platter.scss
@@ -1,24 +1,29 @@
+$swatch-size: 48px;
+
 .platter {
-    position: absolute;
-    top: 100%;
-    left: -50%;
-    width: calc(200% - 16px);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    max-width: 400px;
+    max-height: 400px;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     border-radius: 8px;
     padding: 8px;
-    z-index: 1;
+    z-index: 4;
     background: #fff;
     box-shadow: 0 4px 24px rgba(0, 0, 0, 0.2);
+    overflow: auto;
+    transform: translate(-50%, -50%);
 
     &__option {
         cursor: pointer;
-        width: 96px;
-        height: 96px;
+        width: 64px;
+        height: 64px;
         position: relative;
-        margin: 4px;
-        padding: 8px;
+        padding: 10px;
         display: flex;
         align-items: flex-end;
         justify-content: center;
@@ -43,7 +48,9 @@
 
     &__option-label {
         color: #444;
-        font-size: 14px;
+        font-size: 13px;
+        white-space: nowrap;
+        margin-bottom: -12px;
     }
 
     &__option-icon {
@@ -58,13 +65,51 @@
 
     &__option-color {
         background: var(--color, red);
-        height: 32px;
-        width: 32px;
+        height: $swatch-size;
+        width: $swatch-size;
         border-radius: 4px;
         position: absolute;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-        border: 2px solid #141B1F;
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
+            0 2px 4px rgba(0, 0, 0, 0.1),
+            0 4px 8px rgba(0, 0, 0, 0.1),
+            0 8px 16px rgba(0, 0, 0, 0.1);
+    }
+
+    &__option-pattern {
+        height: $swatch-size;
+        width: $swatch-size;
+        border-radius: 4px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
+            0 2px 4px rgba(0, 0, 0, 0.1),
+            0 4px 8px rgba(0, 0, 0, 0.1),
+            0 8px 16px rgba(0, 0, 0, 0.1);
+    }
+}
+
+.platter-backdrop {
+    z-index: 3;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.2);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    animation: fade-in 0.25s;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
