--- a/src/index.scss
+++ b/src/index.scss
@@ -7,13 +7,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  display: flex;
 }
 
 html,
 body {
   height: 100%;
+  width: 100%;
 }
 
 code {
