--- a/src/components/picker/selected/selected.scss
+++ b/src/components/picker/selected/selected.scss
@@ -76,7 +76,8 @@ $block: '.selected';
             0 8px 16px rgba(0, 0, 0, 0.1);
     }
 
-    &--active {
+    &--active,
+    &:hover {
         transform: scale(1.1);
         background: #fafafa;
 
