--- a/src/container/form/form.scss
+++ b/src/container/form/form.scss
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     align-content: center;
     justify-content: space-evenly;
-    flex: 1;
+    flex: 3;
     padding: 16px;
+    position: relative;
 }
