--- a/src/components/picker/platter/platter.scss
+++ b/src/components/picker/platter/platter.scss
@@ -1,101 +1,67 @@
 $swatch-size: 48px;
 
 .platter {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
-    max-width: 400px;
-    max-height: 400px;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    max-width: 600px;
+    max-height: 90%;
+    width: 90%;
+    height: auto;
     border-radius: 8px;
-    padding: 8px;
     z-index: 4;
     background: #fff;
     box-shadow: 0 4px 24px rgba(0, 0, 0, 0.2);
-    overflow: auto;
     transform: translate(-50%, -50%);
+    overflow: hidden;
 
-    &__option {
-        cursor: pointer;
-        width: 64px;
-        height: 64px;
-        position: relative;
-        padding: 10px;
+    display: flex;
+    flex-direction: column;
+
+    &__header {
         display: flex;
-        align-items: flex-end;
-        justify-content: center;
+        justify-content: space-between;
+        align-items: center;
+        background: #fafafa;
+        padding: 8px;
+        padding-left: 32px;
+    }
 
-        &:before {
-            z-index: -2;
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border-radius: 8px;
-            background: transparent;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
+    &__title {
+        color: #094074;
+        text-align: center;
+        width: 100%;
+    }
 
-        &:hover:before {
+    &__close-button {
+        border: none;
+        background: none;
+        cursor: pointer;
+        border-radius: 4px;
+        padding: 4px;
+        width: 28px;
+        height: 28px;
+        outline: none;
+        float: right;
+
+        &:hover {
             background: #fafafa;
         }
     }
 
-    &__option-label {
-        color: #444;
-        font-size: 13px;
-        white-space: nowrap;
-        margin-bottom: -12px;
-    }
-
-    &__option-icon {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%) scale(0.6);
-        z-index: -1;
-        color: #094074;
-        font-size: 64px;
-    }
-
-    &__option-color {
-        background: var(--color, red);
-        height: $swatch-size;
-        width: $swatch-size;
-        border-radius: 4px;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-            0 2px 4px rgba(0, 0, 0, 0.1),
-            0 4px 8px rgba(0, 0, 0, 0.1),
-            0 8px 16px rgba(0, 0, 0, 0.1);
-    }
-
-    &__option-pattern {
-        height: $swatch-size;
-        width: $swatch-size;
-        border-radius: 4px;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-            0 2px 4px rgba(0, 0, 0, 0.1),
-            0 4px 8px rgba(0, 0, 0, 0.1),
-            0 8px 16px rgba(0, 0, 0, 0.1);
+    &__options {
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        overflow: auto;
+        padding: 8px;
+        padding-bottom: 24px;
     }
 }
 
 .platter-backdrop {
     z-index: 3;
-    position: fixed;
+    position: absolute;
     background: rgba(0, 0, 0, 0.2);
     top: 0;
     left: 0;
