--- a/src/components/part-info-modal/part-info-modal.scss
+++ b/src/components/part-info-modal/part-info-modal.scss
@@ -37,7 +37,7 @@
         font-family: 'Hack', 'Menlo', monospace;
         font-size: 12px;
         text-align: center;
-        border: 1px solid rgba(0, 0, 0, 0.1);
+        border: 2px solid #fafafa;
         padding: 4px 8px;
         border-radius: 4px;
         margin-top: 24px;
@@ -91,7 +91,7 @@
         }
 
         &:hover:after {
-            height: 6px;
+            height: 50%;
         }
     }
 
