--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -3,7 +3,7 @@
     top: 50%;
     left: 50%;
     max-width: 600px;
-    max-height: 90%;
+    max-height: 500px;
     width: 90%;
     height: auto;
     border-radius: 4px;
@@ -12,6 +12,7 @@
     box-shadow: 0 4px 24px rgba(0, 0, 0, 0.2);
     transform: translate(-50%, -50%);
     overflow: hidden;
+    animation: grow-in 0.25s;
 
     display: flex;
     flex-direction: column;
@@ -75,6 +76,22 @@
     }
 
     100% {
+        opacity: 1;
+    }
+}
+
+@keyframes grow-in {
+    0% {
+        transform: translate(-50%, -50%) scale(0.1);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        transform: translate(-50%, -50%) scale(1);
         opacity: 1;
     }
 }
