--- a/src/components/part-info-modal/part-info-modal.scss
+++ b/src/components/part-info-modal/part-info-modal.scss
@@ -1,3 +1,5 @@
+@import '_var.scss';
+
 .part-info-modal {
     &__more-icon {
         border-radius: 4px;
@@ -8,12 +10,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: background 0.25s;
+        transition: background $quick;
         cursor: pointer;
         outline: none;
 
         &:hover {
-            background: #fafafa;
+            background: $off-white;
         }
     }
 
@@ -34,34 +36,32 @@
     }
 
     &__value {
-        font-family: 'Hack', 'Menlo', monospace;
-        font-size: 12px;
+        font-family: $font-mono;
+        font-size: $font-sm;
         text-align: center;
-        border: 2px solid #fafafa;
+        border: 2px solid $off-white;
         padding: 4px 8px;
         border-radius: 4px;
         margin-top: 24px;
         pointer-events: initial;
-        background: #fff;
+        background: $white;
         z-index: 1;
     }
 
     &__right {
         padding-left: 16px;
-        background: #fff;
+        background: $white;
         z-index: 1;
     }
 
     &__title {
-        color: #a9b8c0;
+        color: $ash-grey;
     }
 
     &__vendors {
         list-style-type: none;
         padding: 0;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-            'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-            sans-serif;
+        font-family: $font-default;
     }
 
     &__vendor {
@@ -70,7 +70,7 @@
 
     &__vendor-link {
         text-decoration: none;
-        color: #4aa8ff;
+        color: $picton-blue;
         font-weight: bold;
         display: inline-block;
         padding: 2px 4px;
@@ -85,9 +85,9 @@
             bottom: 0;
             left: 0;
             position: absolute;
-            background: #e9f3fc;
+            background: $alice-blue;
             z-index: -1;
-            transition: height 0.25s;
+            transition: height $quick;
         }
 
         &:hover:after {
@@ -96,8 +96,8 @@
     }
 
     &__vendor-location {
-        color: #a9b8c0;
-        font-size: 14px;
+        color: $ash-grey;
+        font-size: $font-md;
         font-weight: bold;
     }
 }
