--- a/src/components/contribute/contribute.scss
+++ b/src/components/contribute/contribute.scss
@@ -1,27 +1,24 @@
+@import '_var.scss';
+
 .contribute {
     position: fixed;
     bottom: 24px;
     right: 24px;
 
     &__button {
+        @include spread-shadow;
         text-decoration: none;
-        background: #094074;
+        background: $dark-cerulean;
         border-radius: 4px;
         padding: 4px 8px;
-        color: #fff;
-        font-size: 16px;
-        transition: 0.25s;
+        color: $white;
+        font-size: $font-md;
+        transition: $quick;
         cursor: pointer;
-        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-            0 2px 4px rgba(0, 0, 0, 0.1),
-            0 4px 8px rgba(0, 0, 0, 0.1),
-            0 8px 16px rgba(0, 0, 0, 0.1);
-        font-family: 'Staatliches', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-            'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-            sans-serif;
+        font-family: $font-main;
 
         &:hover {
-            background: #125594;
+            background: $raisin-black;
         }
     }
 }
