--- a/src/components/picker/picker.scss
+++ b/src/components/picker/picker.scss
@@ -1,3 +1,5 @@
+@import '_var.scss';
+
 .picker {
     display: flex;
     flex-direction: column;
@@ -14,6 +16,6 @@
     }
 
     &__part-name {
-        color: #094074;
+        color: $dark-cerulean;
     }
 }
