--- a/src/_var.scss
+++ b/src/_var.scss
@@ -10,6 +10,7 @@ $yale-blue: #125594;
 $dark-orange: #fe9000;
 $raisin-black: #242525;
 $dark-cerulean: #094074;
+$platinum: #e3e5ec;
 $ash-grey: #a9b8c0;
 
 // fonts
