--- a/src/container/root/root.scss
+++ b/src/container/root/root.scss
@@ -1,3 +1,5 @@
+@import '_var.scss';
+
 .root {
     display: flex;
     flex-direction: row;
@@ -23,7 +25,7 @@
         background: $raisin-black;
 
         .form {
-            background: $alice-blue;
+            background: $platinum;
         }
     }
 }
